--- a/CadastroAluno/Views/Home/Index.cshtml
+++ b/CadastroAluno/Views/Home/Index.cshtml
@@ -1,8 +1,59 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<Aluno>
+@Html.Partial("_NovoItem", "Aluno")
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row">
+    <div class="col-md-10 offset-md-1">
+
+        <h2 class="offset-5">
+            Alunos
+        </h2>
+
+        <div class="col-12 my-2">
+            <form class="form-inline my-2 my-lg-0" asp-controller="Atores" asp-action="Buscar">
+                <input name="filtroBusca" type="text" class="form-control" placeholder="Buscar ....." />
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
+        </div>
+
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Ações</th>
+                    <th>Nome</th>
+                    <th>Turma</th>
+                    <th>Média</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var aluno in Model)
+                {
+
+                    <tr>
+                        <td>
+                            <div class="d-flex flex-column">
+                                <a class="btn btn-success" asp-action="Atualizar" asp-route-id="@aluno.Id">
+                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    Editar
+                                </a>
+
+                                <a class="btn btn-primary mt-1" asp-action="Detalhes" asp-route-id="@aluno.Id">
+                                    <i class="fa-solid fa-eye"></i>
+                                    Ver
+                                </a>
+
+                                <a class="btn btn-danger mt-1" asp-action="Deletar" asp-route-id="@aluno.Id">
+                                    <i class="fa-solid fa-trash-can"></i>
+                                    Excluir
+                                </a>
+                            </div>
+                        </td>
+                        <td class="align-middle">@aluno.Nome</td>
+                        <td class="align-middle">@aluno.Turma</td>
+                        <td class="align-middle">@aluno.Media</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+    </div>
 </div>
